--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,47 @@
 body {
-    background: #BDBDBD;
     margin: 0;
-}
-div{
-    box-sizing: border-box;
-}
-.prototipe{
-    display: flex;
-}
-header{
-    background: white;
-    padding: 10px;
-}
-header h1{
-    margin: 0;
-}
-div.post{
-    background: white;
-}
-div.post img{
+    padding: 0;
     width: 100%;
-}
-div.post .post-header div:first-child{
-    /* display: inline-block; */
-    width: 80%;
-}
-div.post .post-header div:last-child{
-    display: inline-block;
-    width: 20%;
+    height: 100%;
+    background-color: gray;
+  }
+  #titulo {
+    background-color: rgb(95, 95, 95);
     padding: 10px;
-    text-align: right;
-    color: gray;
-    }
-div.post h2, div.post p{
-   padding: 10px;
-   margin: 20%; 
-}
-div.container{
-    width: 500px;
-    margin: 2%;
-}
+    margin-bottom: 30px;
+    box-shadow: 3px 0 8px black;
+    text-align: center;
+  }
+  #titulo h1 {
+    font-size: 40px;
+    font-weight: 800;
+    text-shadow: 3px 5px 10px rgba(0, 0, 0, 0.6);
+  }
+  .container {
+    margin: 0 auto;
+    width: 300px;
+    background-color: #a1a1a1;
+    border-radius: 15px;
+    padding-left: 5px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+    transition: box-shadow 0.5s ease;
+    gap: 20px;
+    margin-bottom: 15px;
+  }
+  .container:hover {
+    box-shadow: 0 0 30px black;
+  }
+  .prototipe {
+    display: flex;
+    align-items: center;
+  }
+  .prototipe h2 {
+    margin-right: 80px;
+  }
+  .cajaImagen {
+    display: flex;
+    justify-content: center;
+  }
+  .cajaImagen img {
+    border-radius: 10px;
+  }
